--- a/index.html
+++ b/index.html
@@ -37,6 +37,15 @@
     <script defer src="./js/script.js"></script>
     <script defer src="./js/animation.js"></script>
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-8WLJ0MWYZ8"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-8WLJ0MWYZ8');
+    </script>
 </head>
 
 <body>
@@ -438,7 +447,7 @@
 
 
             </div>
-            <div class="mailbtn" onclick="window.location.href = 'mailto:developer.aqeeb@gmail.com';">
+            <div class="mailbtn" onclick="window.location.href = 'mailto:hello@aqeeb.dev';">
                 <a>hello@aqeeb.dev
                     <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
                         xmlns:svgjs="http://svgjs.com/svgjs" width="19" height="19" x="0" y="0"
