--- a/index.html
+++ b/index.html
@@ -11,10 +11,16 @@
     <meta name="keywords" content="mohmmed aqeeb, aqeeb, aqeeb pathan, Mohmmed Aqeeb, M. Aqeeb Pathan">
     <meta name="author" content="Mohmmed Aqeeb">
 
-    <link rel="icon" type="image/png" href="./assets/favicon.png">
-    <title>Mohmmed Aqeeb — Frontend Developer</title>
+    <link rel="shortcut icon" type="image/x-icon" href="/assets/favicon/favicon-16x16.png" sizes="16x16">
+    <link rel="shortcut icon" type="image/x-icon" href="/assets/favicon/favicon-32x32.png" sizes="32x32">
+    <link rel="shortcut icon" type="image/x-icon" href="/assets/favicon/favicon.ico" sizes="48x48">
+    <link rel="apple-touch-icon" href="/assets/favicon/apple-touch-icon.png" sizes="180x180">
+    <link rel="manifest" href="manifest.json">
+
+
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/splide.css">
+    <title>Mohmmed Aqeeb — Frontend Developer</title>
 
     <!-- Animated.style CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
@@ -31,7 +37,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js"></script> -->
 
     <!-- Dailymotion API -->
-    <script src="https://api.dmcdn.net/all.js"></script>
+    <!-- <script src="https://api.dmcdn.net/all.js"></script> -->
 
     <!-- App script -->
     <script defer src="./js/script.js"></script>
@@ -470,7 +476,7 @@
                         <a>LinkedIn</a>
                     </li>
 
-                    <li class="elsewhere-link " onclick="window.open('https://www.instagram.com/constaqeeb/');">
+                    <li class="elsewhere-link " onclick="window.open('https://www.instagram.com/aqeeb.dev/');">
                         <a>Instagram</a>
 
                     </li>
