--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
 
     <!-- Meta tags -->
     <meta name="description" content="The portfolio of Mohmmed Aqeeb, Front-End Developer.">
-    <meta name="keywords" content="mohmmed aqeeb, aqeeb, aqeeb pathan, Mohmmed Aqeeb, M. Aqeeb Pathan">
+    <meta name="keywords" content="mohmmed aqeeb, aqeeb, aqeeb pathan, Mohmmed Aqeeb, mohmmed aqeeb pathan">
     <meta name="author" content="Mohmmed Aqeeb">
+
+    <meta property="og:description" content="The portfolio of Mohmmed Aqeeb, Front-End Developer.">
+    <meta property="og:image:alt" content="Mohmmed Aqeeb">
+    <meta property="og:site_name" content="Mohmmed Aqeeb">
+    <meta property="og:title" content="Mohmmed Aqeeb — Frontend Developer">
 
     <link rel="shortcut icon" type="image/x-icon" href="/assets/favicon/favicon-16x16.png" sizes="16x16">
     <link rel="shortcut icon" type="image/x-icon" href="/assets/favicon/favicon-32x32.png" sizes="32x32">
