--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta name="author" content="Mohmmed Aqeeb">
 
     <meta property="og:description" content="The portfolio of Mohmmed Aqeeb, Front-End Developer.">
+    <meta property="og:url" content="https://aqeeb.dev">
     <meta property="og:image:alt" content="Mohmmed Aqeeb">
     <meta property="og:site_name" content="Mohmmed Aqeeb">
     <meta property="og:title" content="Mohmmed Aqeeb — Frontend Developer">
