Updated SVG icons

--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
 <body>
     <section class="hero">
         <div class="hero-container">
+            <p class="bismillah" title="In the name of Allah, the Most Gracious, the Most Merciful">بسم الله الرحمن
+                الرحيم</p>
             <div class="hero-model">
                 <model-viewer id="model" src="./models/desk.glb" camera-controls disable-pan disable-zoom
                     interaction-prompt="none" min-camera.orbit="auto 55deg auto" min-camera-orbit="auto 55deg auto"
@@ -204,16 +206,16 @@
                     <div class="animation animate__animated  animate__fadeInLeft animate__delay-1s "
                         style="--animate-delay: 0.4s;">
                         <svg class="tech_icons">
-                            <use href="./assets/svg/skills.svg#css"></use>
+                            <use href="./assets/svg/skills.svg#nextjs"></use>
                         </svg>
-                        <p>CSS</p>
+                        <p>NEXT.js</p>
                     </div>
                     <div class="animation animate__animated  animate__fadeInLeft animate__delay-1s "
                         style="--animate-delay: 0.5s;">
                         <svg class="tech_icons">
-                            <use href="./assets/svg/skills.svg#html"></use>
+                            <use href="./assets/svg/skills.svg#typescript"></use>
                         </svg>
-                        <p>HTML</p>
+                        <p>TypeScript</p>
                     </div>
                     <div class="animation animate__animated  animate__fadeInLeft animate__delay-1s "
                         style="--animate-delay: 0.6s;">
