--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@
                             </li>
 
                             <li class="elsewhere-link "
-                                onclick="window.open('https://www.instagram.com/aqeeb.dev/');">
+                                onclick="window.open('https://www.instagram.com/aqeeeeeeeb/');">
                                 <a>Instagram</a>
 
                             </li>
