--- a/index.html
+++ b/index.html
@@ -176,11 +176,11 @@
                     If you want to see what I've done before, check out my
                     <a
                         onclick="document.querySelector('#portfolio').scrollIntoView(
-                        {behavior: 'smooth'});">portfolio</a>
-                    . If you want to work together, <a
+                        {behavior: 'smooth'});">portfolio</a>.
+                     If you want to work together, <a
                         onclick="document.querySelector('#footer').scrollIntoView(
                         {behavior: 'smooth'});">get in
-                        touch</a>!
+                        touch!</a>
                 </p>
             </div>
         </section>
