--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                      If you want to work together, <a
                         onclick="document.querySelector('#footer').scrollIntoView(
                         {behavior: 'smooth'});">get in
-                        touch!</a>
+                        touch</a>!
                 </p>
             </div>
         </section>
