--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
         <script defer src="./js/animation.js"></script>
 
         <!-- Google tag (gtag.js) -->
-        <script async
+<!--         <script async
             src="https://www.googletagmanager.com/gtag/js?id=G-8WLJ0MWYZ8"></script>
         <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
 
-        gtag('config', 'G-8WLJ0MWYZ8');
+        gtag('config', 'G-8WLJ0MWYZ8'); -->
     </script>
     </head>
 
